methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:15: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:18: error: Unmatched closing brace '}' ignored here
   return false;}
                ^